# python-todo-api

./: README.rst  pyproject.toml  sql_app.db
todoapi/: db.py  main.py  schema.py
