[tool.poetry]
name = "toDoApi"
version = "0.1.0"
description = ""
authors = ["Yasir <yasirkhalily44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
SQLAlchemy = "^1.3.23"
fastapi = "^0.63.0"
isort = "^5.7.0"
flake8 = "^3.8.4"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
